Fix database structure and add Firebase config

--- a/src/components/pages/login.html
+++ b/src/components/pages/login.html
@@ -4,7 +4,28 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-    
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyABY8_3Oe5-R8lzDSgA1I9540mA5oBl_sE",
+        authDomain: "apprisen-fdea1.firebaseapp.com",
+        databaseURL: "https://apprisen-fdea1.firebaseio.com",
+        projectId: "apprisen-fdea1",
+        storageBucket: "apprisen-fdea1.appspot.com",
+        messagingSenderId: "148051406923",
+        appId: "1:148051406923:web:30e77cfea3c4adf27c5dce"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
+
     <title>Login Template</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
