--- a/src/components/pages/index.html
+++ b/src/components/pages/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main_nav">
-            <img src="/src/images/logo.png" alt = "logo" style = "width:50px;height:50px;""/a>
+            <!--<img src="/src/images/logo.png" alt = "logo" style = "width:50px;height:50px;""/a>-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
