--- a/src/components/pages/login.html
+++ b/src/components/pages/login.html
@@ -5,27 +5,6 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyABY8_3Oe5-R8lzDSgA1I9540mA5oBl_sE",
-        authDomain: "apprisen-fdea1.firebaseapp.com",
-        databaseURL: "https://apprisen-fdea1.firebaseio.com",
-        projectId: "apprisen-fdea1",
-        storageBucket: "apprisen-fdea1.appspot.com",
-        messagingSenderId: "148051406923",
-        appId: "1:148051406923:web:30e77cfea3c4adf27c5dce"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
-
     <title>Login Template</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
@@ -35,18 +14,35 @@
 
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
   </head>
 
+  <script type="text/javascript">
+    var arr = null;
+    var request = new XMLHttpRequest();
+   request.open("GET", "people-data.json", false);
+   request.send(null)
+   var my_JSON_object = JSON.parse(request.responseText);
+   alert (my_JSON_object.result[0]);
+    function checkPass(user, pass){
+      //var currUser = arr.parse("username");
+      var obj = JSON.parse(arr);
+
+      console.log();
+    }
+
+  </script>
+
   <body class="text-center">
-    <form class="form-signin">
+    <form class="form-signin" method="post">
       <img class="mb-4" src="team-9/src/images/logo.jpg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-      <label for="inputEmail" class="sr-only">Username</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="">
+      <label for="inputUsername" class="sr-only">Username</label>
+      <input id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="checkPass(user, pass)">Sign in</button>
     </form>
 
-
+  <button >Click me</button>
 </body></html>
